# utils

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  appveyor.yml
.circleci/: config.yml
sources/: CMakeLists.txt
sources/include/utils/: allocator.h  cartesian_product.h  clz.h  common.h  ctz.h  detector.h  fast_pimpl.h  function_traits.h  memory.h  padding_checker.h  rel_ops_checker.h  simple_resource.h  std_traits.h  stl_traits.h  timer.h  type_list.h  utils.h  value_list.h
sources/include/utils/details/: cxz.h
sources/include/utils/memory/: memory.h  monotonic_buffer_resource.h  simple_resource.h
tests/: CMakeLists.txt
tests/src/: allocator_tests.cpp  cartesian_product_tests.cpp  clz_tests.cpp  ctz_tests.cpp  fast_pimpl_tests.cpp  function_traits_free_function_checkers_tests.cpp  function_traits_member_data_checkers_tests.cpp  function_traits_member_type_checkers_tests.cpp  function_traits_method_checkers_tests.cpp  function_traits_static_member_data_checkers_tests.cpp  function_traits_static_method_checkers_tests.cpp  function_traits_tests.cpp  memory_tests.cpp  memvcmp_tests.cpp  monotonic_buffer_resource_tests.cpp  padding_checker_tests.cpp  rel_ops_checker_tests.cpp  simple_resource_tests.cpp  timer_tests.cpp  type_list_tests.cpp  utils_std_traits_tests.cpp  utils_stl_traits_tests.cpp  utils_tests.cpp  value_list_tests.cpp
